<resources>
    <string name="app_name">Hessah Store</string>
    <string name="error_invalid_email" translatable="false">This email address is invalid</string>
    <string name="error_invalid_password" translatable="false">This password is too short</string>
    <string name="error_incorrect_password" translatable="false">This password is incorrect</string>
    <string name="error_field_required" translatable="false">This field is required</string>
    <string name="login" translatable="false">Login</string>
    <string name="password_and_confirm_notmatch" translatable="false">Confirm password is not password </string>
    <string name="changelanguage" translatable="false">Change Language</string>
    <string name="arabic" translatable="false">Arabic</string>
    <string name="english" translatable="false">English</string>
    <string name="sign_in" translatable="false">Sign in</string>
    <string name="sign_up" translatable="false">Sign up</string>
    <string name="frist_name" translatable="false">First Name</string>
    <string name="shopping_cart" translatable="false">Shopping Cart</string>
    <string name="shopping_cart_is_empty" translatable="false">Your shopping cart is empty!</string>
    <string name="continu" translatable="false">Continue</string>
    <string name="snap_chat" translatable="false">Snapchat</string>
    <string name="snap_chat_website" translatable="false">https://www.snapchat.com/add/hessah_store</string>
    <string name="snap_chat_join" translatable="false">أضفني على السناب شات لمتابعة كل جديد في عالم العطور</string>
    <string name="snap_chat_category" translatable="false">There are no products to list in this category.</string>
    <string name="btn_link_signup" translatable="false">Don\'t have an account yet Register !!</string>
    <string name="btn_link_login" translatable="false">Already have an account Login !!</string>
    <string name="show_pwd" translatable="false">Show Password</string>
    <string name="my_account" translatable="false">My Account</string>
    <string name="wish_list" translatable="false">Wish List</string>
    <string name="payment" translatable="false">Payment</string>
    <string name="number_whats" translatable="false">0599180852</string>
    <string name="home" translatable="false">Home</string>
    <string name="Oud_and_albukhur" translatable="false">Oud and albukhur</string>
    <string name="Snapchat" translatable="false">Snapchat</string>
    <string name="uae_perfumes" translatable="false">UAE Perfumes</string>
    <string name="offers" translatable="false">offers</string>
    <string name="hessah_store" translatable="false">Hessah Store</string>
    <string name="about_hessah_store" translatable="false">There is a proven fact a long time ago is that the content of the page reading what Silaa for the reader to focus on the external form of the text or the form of the paragraphs are placed in the page read. Therefore method is used Lorem Ipsum because it gives a natural distribution -To some extent</string>
    <string name="featured" translatable="false">Featured</string>
    <string name="bestseller" translatable="false">Bestseller</string>
    <string name="latest" translatable="false">Latest</string>
    <string name="albukhur1" translatable="false">Ange ou Demon Le Secret Elixir Givenchy for women</string>
    <string name="albukhur2" translatable="false">Dior Addict Christian Dior for women</string>
    <string name="albukhur3" translatable="false">Dior Addict Eau de Toilette Christian Dior for women2</string>
    <string name="albukhur4" translatable="false">Dior Homme Intense Christian Dior for men</string>
    <string name="albukhur5" translatable="false">Eaudemoiselle de Givenchy Absolu d’Oranger Givenchy for women</string>
    <string name="albukhur6" translatable="false">Eaudemoiselle de Givenchy Ambre Velours Givenchy for women</string>
    <string name="albukhur7" translatable="false">Fahrenheit Le Parfum Christian Dior for men</string>
    <string name="albukhur8" translatable="false">Hypnotic Poison Christian Dior for women 2</string>
    <string name="albukhur9" translatable="false">Hypnotic Poison Christian Dior for women</string>
    <string name="albukhur10" translatable="false">Miss Dior Blooming Bouquet Couture Edition Christian Dior for women</string>
    <string name="albukhur11" translatable="false">Miss Dior Le Parfum Christian Dior for women</string>
    <string name="albukhur12" translatable="false">Sauvage Christian Dior for men</string>
    <string name="price_albukhur1" translatable="false">350 S.R</string>
    <string name="price_albukhur2" translatable="false">180 S.R</string>
    <string name="price_albukhur3" translatable="false">950 S.R</string>
    <string name="price_albukhur4" translatable="false">356 S.R</string>
    <string name="price_albukhur5" translatable="false">1,100 S.R</string>
    <string name="price_albukhur6" translatable="false">385 S.R</string>
    <string name="price_albukhur7" translatable="false">475 S.R</string>
    <string name="price_albukhur8" translatable="false">265 S.R</string>
    <string name="price_albukhur9" translatable="false">410 S.R</string>
    <string name="price_albukhur10" translatable="false">500 S.R</string>
    <string name="price_albukhur11" translatable="false">355 S.R</string>
    <string name="price_albukhur12" translatable="false">250 S.R</string>
    <string name="last_name" translatable="false">Last Name</string>
    <string name="telephone" translatable="false">Telephone</string>
    <string name="fax" translatable="false">Fax</string>
    <string name="company" translatable="false">Company</string>
    <string name="address1" translatable="false">Address 1</string>
    <string name="city" translatable="false">City</string>
    <string name="country" translatable="false">Country</string>
    <string name="region_State" translatable="false">Region / State</string>
    <string name="your_Password" translatable="false">Your Password</string>
    <string name="newsletter" translatable="false">Newsletter</string>
    <string name="subscribe" translatable="false">Subscribe</string>
    <string name="yes" translatable="false">yes</string>
    <string name="no" translatable="false">no</string>
    <string name="your_address" translatable="false">Your Address</string>
    <string name="your_personal_details" translatable="false">Your Personal Details</string>
    <string name="email" translatable="false">E-Mail</string>
    <string name="password" translatable="false">password</string>
    <string name="forget_password" translatable="false">Forget  Password  ?</string>
    <string name="log_with_in" translatable="false">Log with in</string>
    <string name="size" translatable="false">الحجم</string>
    <string name="qty" translatable="false">Qty</string>
    <string name="add_to_card" translatable="false">Add To Card</string>
    <string name="related_products" translatable="false">Related Products</string>
    <string name="review" translatable="false">1 reviews </string>
    <string name="Write_a_review" translatable="false"> Write a review</string>
    <string name="slach" translatable="false"> / </string>
    <string name="name" translatable="false">La Nuit Tresor Lancome for women</string>
    <string name="brand" translatable="false">Brand : </string>
    <string name="lancôme" translatable="false">Lancôme</string>
    <string name="product_code" translatable="false">Product Code :  </string>
    <string name="product_code_name" translatable="false">عطر نسائي</string>
    <string name="reward_points" translatable="false">Reward Points : </string>
    <string name="reward_points_number" translatable="false">40</string>
    <string name="availability" translatable="false">Availability : </string>
    <string name="availability_name" translatable="false">In Stock</string>
    <string name="details" translatable="false">The composition is announced as a gourmand aphrodisiac and a love potion created by perfumers Christophe Raynaud and Amandine Marie. It supposedly depicts the dark side of rose and mixes notes of black rose with Tahitian vanilla orchid absolute. There are also accords of natural incense, papyrus, patchouli and litchi praline added to the mix</string>
    <string name="details_list_item" translatable="false">Lancome launches L Autre Oud in October 2012 as a part of the luxurious and exclusive collectio..</string>
    <string name="price" translatable="false">£35.69</string>
    <string name="perfumes" translatable="false">UAE Perfumes</string>
    <string name="oud_and_albukhur" translatable="false">Oud and albukhur</string>
    <string name="product_compare" translatable="false">Product Compare (0)</string>
    <string name="sort_by" translatable="false">Sort By:</string>
    <string name="show" translatable="false">Show:</string>
    <string name="profile" translatable="false">profile</string>
    <string name="home_side_menu" translatable="false">Home</string>
    <string name="order_side_menu" translatable="false">Orders</string>
    <string name="vouchres_side_menu" translatable="false">Vouchres</string>
    <string name="point_side_menu" translatable="false">Points</string>
    <string name="contact_us_side_menu" translatable="false">Contact us</string>
    <string name="about_app_side_menu" translatable="false">About app</string>
    <string name="change_language_side_menu" translatable="false">Change language</string>
    <string name="sign_out_side_menu" translatable="false">Sign out</string>
    <string name="agree_to_the_Privacy" translatable="false">I have read and agree to the Privacy</string>
    <string-array name="country_arrray">
        <item>Please Select</item>
        <item>Egypt</item>
        <item>saudi arabia</item>
        <item>Emirates</item>
        <item>kuwait</item>
    </string-array>
    <string-array name="perfumes_arrray">
        <item>Perfumes</item>
        <item>men Perfumes (371)</item>
        <item>Perfumes of Women (396)</item>

    </string-array>
    <string-array name="size_arrray">
        <item>--Please Select--</item>
        <item>75 ml (+£45.75)</item>
        <item>50 ml (+£35.50)</item>
        <item>25 ml</item>

    </string-array>
    <string-array name="language_arrray">
        <item>Select Language</item>
        <item>English</item>
        <item>Arabilc </item>

    </string-array>
    <string-array name="currency_arrray">
        <item>select currency</item>
        <item>Euro</item>
        <item>pound sterling</item>
        <item>us Dollar</item>
        <item> ريال سعودي </item>


    </string-array>
    <string-array name="region_State_arrray">
        <item>Please Select</item>
        <item>Nasr City</item>
        <item>ryade</item>
        <item>fujairah</item>
        <item>farwaniyah</item>
    </string-array>
    <string-array name="oud_sort_by_arrray">
        <item>Default</item>
        <item>Name (A - Z)</item>
        <item>Name (Z - A)</item>
        <item>Price (High - Low)</item>
        <item>Price (Low - High)</item>
        <item>Rating (Highest - Lowest)</item>
        <item>Rating (Lowest - Highest)</item>
        <item>Model (A - Z)</item>
        <item>Model (Z - A)</item>
    </string-array>
    <string-array name="oud_show_iten_arrray">
        <item>15</item>
        <item>25</item>
        <item>50</item>
        <item>75</item>
        <item>100</item>

    </string-array>
    <string name="mobile" translatable="false">Mobile</string>
    <string name="age" translatable="false">Age</string>
    <string name="confirm_password" translatable="false">Confirm password</string>
    <string name="Send" translatable="false">Send</string>
    <string name="forget_password_activty" translatable="false">Forget  Password</string>
    <string name="add_your_email" translatable="false">Add your email to reset</string>
    <string name="your_password" translatable="false">your password</string>
</resources>