<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_personal_details"
                android:textSize="22sp"
                android:textColor="#000" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_input_layout_frist_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/reg_frist_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:singleLine="true"
                    android:ems="10"
                    android:textSize="15sp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/frist_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_input_layout_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/Ed_reg_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:singleLine="true"
                    android:ems="10"
                    android:textSize="15sp"
                    android:hint="@string/last_name"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/Ed_reg_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:ems="10"
                    android:textSize="15sp"
                    android:hint="@string/email"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_input_layout_telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/Ed_reg_telephone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:singleLine="true"
                    android:ems="10"
                    android:textSize="15sp"
                    android:inputType="number"
                    android:hint="@string/telephone" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_input_layout_fax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/signup_input_fax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:singleLine="true"
                    android:ems="10"
                    android:visibility="visible"
                    android:textSize="15sp"
                    android:inputType="number"
                    android:hint="@string/fax" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_address"
                android:textSize="22sp"
                android:textColor="#000" />

            <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_input_layout_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/Ed_reg_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="text"
                android:singleLine="true"
                android:ems="10"
                android:textSize="15sp"
                android:hint="@string/company"/>
        </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_input_layout_address1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/Ed_reg_address1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="text"
                    android:singleLine="true"
                    android:ems="10"
                    android:textSize="15sp"
                    android:hint="@string/address1"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:paddingRight="7dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:text="@string/country"/>

                <Spinner
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:id="@+id/spinnerCountry"
                    android:prompt="@array/country_arrray"
                    android:layout_marginRight="10dp"/>


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:paddingRight="7dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:text="@string/region_State"/>

                <Spinner
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:id="@+id/spinnerRegion_State"
                    android:prompt="@array/region_State_arrray"
                    android:layout_marginRight="10dp"/>


            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_input_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/Ed_reg_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="text"
                    android:singleLine="true"
                    android:ems="10"
                    android:textSize="15sp"
                    android:hint="@string/city"/>
            </android.support.design.widget.TextInputLayout>

            <ProgressBar
                android:id="@+id/m_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"/>



            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_password"
                android:textSize="22sp"
                android:textColor="#000" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/Ed_reg_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:ems="10"
                    android:textSize="15sp"
                    android:hint="@string/password"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_input_layout_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/Ed_reg_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:ems="10"
                    android:textSize="15sp"
                    android:hint="@string/confirm_password"/>
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_marginTop="15sp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/Ch_ShowPassword"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="left" />

                <TextView
                    android:paddingRight="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_pwd"
                    android:textSize="15sp"
                    android:textColor="#000"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <TextView
                    android:paddingRight="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newsletter"
                    android:layout_gravity="center"
                    android:textSize="15sp"
                    android:textColor="#000"/>
                <RadioGroup
                    android:id="@+id/gender_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/male_radio_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yes"
                        android:layout_marginLeft="35dp"
                        android:checked="true"
                        />
                    <RadioButton
                        android:id="@+id/female_radio_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="35dp"
                        android:text = "@string/no"/>
                </RadioGroup>

            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="15sp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/Ch_Privacy"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="left" />

                <TextView
                    android:paddingRight="7dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:text="@string/agree_to_the_Privacy"/>

            </LinearLayout>



            <Button
                android:id="@+id/btn_sign_up_register"
                android:layout_width="215dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:enabled="false"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_design_profile"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textAllCaps="true"
                android:textColor="#555557" />


            <Button
                android:id="@+id/btn_login_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_link_login"
                android:background="@null"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="@android:color/black"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>