<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShoppingCartActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

       <LinearLayout
           android:orientation="vertical"
           android:layout_margin="15dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/shopping_cart"
               android:layout_marginTop="10dp"
               android:textSize="22sp"
               android:textColor="#111111"/>


           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="10dp"
               android:text="@string/shopping_cart_is_empty"
               android:textSize="15sp"
               android:textColor="#5C5959"/>

           <Button
               android:id="@+id/btn_continue_shopping_card"
               android:layout_width="150dp"
               android:layout_height="45dp"
               android:layout_gravity="right"
               android:layout_marginTop="25dp"
               android:background="@drawable/btn_design_profile"
               android:gravity="center"
               android:text="@string/continu"
               android:textColor="#FFFFFF" />

       </LinearLayout>

    </LinearLayout>

</LinearLayout>