<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetpasswordEmailActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="625dp"
        android:background="@drawable/background_forgetpassword_emailcode">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="35dp"
            android:text="@string/forget_password_activty"
            android:textSize="30sp"
            android:textColor="#F3F4F5"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_your_email"
                android:textSize="18sp"
                android:textColor="#b3fbfbfe"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_password"
                android:textSize="18sp"
                android:textColor="#b3fbfbfe"/>

        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_width="327dp"
            android:layout_height="70dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:background="@drawable/rectangle">

            <LinearLayout
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_eamil_forgetpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="12sp"
                    android:visibility="invisible"
                    android:layout_marginTop="5dp"
                    android:singleLine="true"
                    android:textColor="#B6B3B3"/>

                <EditText
                    android:id="@+id/ed_email_forgetpassword"
                    android:layout_width="225dp"
                    android:background="#FFFEFE"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/email"
                    android:textColor="#ff212121"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="16sp" />

            </LinearLayout>



        </LinearLayout>

        <ProgressBar
            android:id="@+id/m_progress_emailForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_forgetpassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="35dp"
            android:textColor="#ff0065ff"
            android:text="@string/Send"
            android:textAllCaps="true"
            android:background="@drawable/layout_design"/>

        <ProgressBar
            android:id="@+id/m_progress_ForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

    </LinearLayout>


</LinearLayout>